--- a/index.html
+++ b/index.html
@@ -1,95 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ROI Calculator - Drone Spray Business</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="container">
-    <h1>ROI Calculator: Drone Spray Business</h1>
-
-    <!-- Step 1 -->
+    <h1>ROI Calculator</h1>
     <section id="step1">
       <h2>Step 1: How would you like to work with us?</h2>
-      <label><input type="radio" name="role" value="dealer"> Dealer</label><br>
-      <label><input type="radio" name="role" value="spray"> Spray Service Business</label><br>
-      <button onclick="nextStep(1)">Next</button>
+      <label><input type="radio" name="role" value="dealer" required> Dealer</label><br>
+      <label><input type="radio" name="role" value="spray" required checked> Spray Service Business</label><br>
+      <div class="buttons-container">
+        <button class="next-button" onclick="nextStep(1)" disabled>Next</button>
+      </div>
     </section>
 
-    <!-- Step 2 -->
     <section id="step2" class="hidden">
       <h2>Step 2: Spray Business Details</h2>
       <label>Hire a pilot?
-        <select id="hirePilot">
+        <select id="hirePilot" required>
           <option value="yes">Yes</option>
           <option value="no">No</option>
         </select>
       </label><br>
       <label>License for:
-        <select id="licenseType">
+        <select id="licenseType" required>
           <option value="self">Self</option>
           <option value="hired">Hired Pilot</option>
         </select>
       </label><br>
       <label>Drone Model:
-        <select id="droneModel">
+        <select id="droneModel" required>
           <option value="krishak1i">Krishak 1i</option>
           <option value="krishak2i">Krishak 2i</option>
         </select>
       </label><br>
-      <button onclick="nextStep(2)">Next</button>
+      <div class="buttons-container">
+        <button class="next-button" onclick="nextStep(2)">Next</button>
+        <button class="back-button" onclick="previousStep(2)">Back</button>
+      </div>
     </section>
 
-    <!-- Step 3 -->
     <section id="step3" class="hidden">
       <h2>Step 3: Acreage and Mapping</h2>
-      <label>Acres per day: <input type="number" id="acresPerDay"></label><br>
-      <label>Spray days per year: <input type="number" id="sprayDays"></label><br>
+      <label>Acres per day: <input type="number" id="acresPerDay" required></label><br>
+      <label>Spray days per year: <input type="number" id="sprayDays" required></label><br>
       <label>Mapping device:
-        <select id="mappingDevice">
+        <select id="mappingDevice" required>
           <option value="inbuilt">Inbuilt</option>
           <option value="highAccuracy">High Accuracy</option>
         </select>
       </label><br>
-      <button onclick="nextStep(3)">Next</button>
+      <div class="buttons-container">
+        <button class="next-button" onclick="nextStep(3)">Next</button>
+        <button class="back-button" onclick="previousStep(3)">Back</button>
+      </div>
     </section>
 
-    <!-- Step 4 -->
     <section id="step4" class="hidden">
       <h2>Step 4: Financing Options</h2>
       <label>Funding Method:
-        <select id="funding" onchange="toggleNBFCInterest()">
+        <select id="funding" onchange="toggleNBFCInterest()" required>
           <option value="self">Self Finance</option>
           <option value="aif">Loan under AIF</option>
           <option value="nbfc">Loan from NBFC</option>
         </select>
       </label><br>
       <div id="nbfcInterestContainer" class="hidden">
-        <label>NBFC Interest Rate (%): <input type="number" id="nbfcInterest"></label><br>
+        <label>NBFC Interest Rate (%): <input type="number" id="nbfcInterest" required></label><br>
       </div>
       <label>Help securing loan?
-        <select id="loanHelp">
+        <select id="loanHelp" required>
           <option value="yes">Yes</option>
           <option value="no">No</option>
         </select>
       </label><br>
-      <label>Investment Amount: <input type="number" id="investmentAmount"></label><br>
-      <label>Service Price (per acre): <input type="number" id="pricePerAcre"></label><br>
-      <button onclick="generateReport()">Generate Report</button>
+      <label>Investment Amount: <input type="number" id="investmentAmount" required></label><br>
+      <label>Service Price (per acre): <input type="number" id="pricePerAcre" required></label><br>
+      <div class="buttons-container">
+        <button id="generateReportButton" onclick="generateReport()" disabled>Generate Report</button>
+        <button class="back-button" onclick="previousStep(4)">Back</button>
+      </div>
     </section>
-
-    <!-- Final Report -->
+    <!-- <div id="messageModal" class="modal">
+      <div class="modal-content">
+        <h2>Congratulations!</h2>
+        <p>You seem to be on great ground to start your profitable business.</p>
+        <button id="viewButton" class="view-button">View Report</button>
+      </div>
+    </div> -->
+    
     <section id="report" class="hidden">
       <h2>Final Report</h2>
       <div id="reportTables"></div>
       <canvas id="pieChart" width="400" height="400"></canvas>
       <canvas id="lineChart"></canvas>
+      <div class="buttons-container">
+        <button onclick="window.location.reload()">Home</button>
+      </div>
     </section>
   </div>
-
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
+
 </html>
